@@ -85,7 +85,7 @@ static GwyModuleInfo module_info = {
     &module_register,
     N_("Cut graph"),
     "Petr Klapetek <klapetek@gwyddion.net>",
-    "1.0",
+    "1.1",
     "David Nečas (Yeti) & Petr Klapetek",
     "2007",
 };
@@ -263,24 +263,25 @@ do_cut(CutArgs *args)
 {
     gint i, j, k, ndata, nndata, cstart, cend;
     GwyContainer *data;
-    GwyGraphModel *ngmodel;
+    GwyGraphModel *ngmodel, *gmodel;
     GwyGraphCurveModel *gcmodel, *ngcmodel;
     const gdouble *xdata, *ydata;
     gdouble *nxdata, *nydata;
 
-    ngmodel = gwy_graph_model_new_alike(args->graph_model);
+    gmodel = gwy_graph_get_model(args->parent_graph);
+    ngmodel = gwy_graph_model_new_alike(gmodel);
 
     if (args->is_all) {
         cstart = 0;
-        cend = gwy_graph_model_get_n_curves(args->graph_model);
-    } else {
+        cend = gwy_graph_model_get_n_curves(gmodel);
+    }
+    else {
         cstart = args->curve;
         cend = args->curve + 1;
     }
 
-    for (k=cstart; k<cend; k++) {
-
-        gcmodel = gwy_graph_model_get_curve(args->graph_model, k);
+    for (k = cstart; k < cend; k++) {
+        gcmodel = gwy_graph_model_get_curve(gmodel, k);
         ngcmodel = gwy_graph_curve_model_duplicate(gcmodel);
 
         xdata = gwy_graph_curve_model_get_xdata(gcmodel);
@@ -289,15 +290,20 @@ do_cut(CutArgs *args)
 
         /*TODO this should really work differently*/
         nndata = 0;
-        for (i=0; i<ndata; i++)
-            if (xdata[i]>=args->from && xdata[i]<args->to) nndata++;
+        for (i = 0; i < ndata; i++) {
+            if (xdata[i] >= args->from && xdata[i] < args->to)
+                nndata++;
+        }
 
-        if (nndata == 0) continue;
+        if (nndata == 0) {
+            g_object_unref(ngcmodel);
+            continue;
+        }
         nxdata = g_new(gdouble, nndata);
         nydata = g_new(gdouble, nndata);
 
-        j=0;
-        for (i=0; i<ndata; i++) {
+        j = 0;
+        for (i = 0; i < ndata; i++) {
             if (xdata[i]>=args->from && xdata[i]<args->to) {
                 nxdata[j] = xdata[i];
                 nydata[j] = ydata[i];
@@ -305,6 +311,8 @@ do_cut(CutArgs *args)
             }
         }
         gwy_graph_curve_model_set_data(ngcmodel, nxdata, nydata, nndata);
+        g_free(nxdata);
+        g_free(nydata);
 
         gwy_graph_model_add_curve(ngmodel, ngcmodel);
         g_object_unref(ngcmodel);
@@ -340,14 +348,15 @@ pick_curves(CutControls *controls)
     gwy_graph_model_remove_all_curves(graph_model);
 
     if (!controls->args->is_all) {
-    gwy_graph_model_add_curve(graph_model,
-                              gwy_graph_model_get_curve(parent_gmodel,
-                                                        controls->args->curve));
-    } else {
-        for (i=0; i<gwy_graph_model_get_n_curves(parent_gmodel); i++)
+        gwy_graph_model_add_curve(graph_model,
+                                  gwy_graph_model_get_curve(parent_gmodel,
+                                                            controls->args->curve));
+    }
+    else {
+        for (i = 0; i < gwy_graph_model_get_n_curves(parent_gmodel); i++)
             gwy_graph_model_add_curve(graph_model,
-                              gwy_graph_model_get_curve(parent_gmodel,
-                                                        i));
+                                      gwy_graph_model_get_curve(parent_gmodel,
+                                                                i));
     }
     cut_limit_selection(controls, TRUE);
 }
@@ -356,11 +365,9 @@ static void
 curve_changed(GtkComboBox *combo,
               CutControls *controls)
 {
-
     controls->args->curve = gwy_enum_combo_box_get_active(combo);
     pick_curves(controls);
 }
-
 
 static void
 graph_selected(GwySelection* selection,
